[Chromium] mimic the (old) behavior of the mac port for (re)setting the color profile https://bugs.webkit.org/show_bug.cgi?id=75618

Eventually, we should get away from setting the display's color profile, as the mac port is doing now.

Reviewed by Tony Chang.

* DumpRenderTree/chromium/LayoutTestHelper.mm:
(installLayoutTestColorProfile):
(restoreUserColorProfile):
(main):


Canonical link: https://commits.webkit.org/92915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104745 268f45cc-cd09-0410-ab3c-d52691b4dbfc